Update index.html last

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <main class="container mt-4">
         <div class="row">
             <!-- Left: Recent Issues -->
-            <div class="col-lg-5 mb-4">
+            <div class="col-lg-5 mb-4 order-2 order-lg-1">
                 <h4><i class="fa-solid fa-list"></i> Recent Issues</h4>
                 <div class="table-responsive">
                     <table class="table table-bordered table-hover align-middle" id="issuesTable">
@@ -179,7 +179,7 @@
                 </div>
             </div>
             <!-- Right: Map and Resolved Issues -->
-            <div class="col-lg-7">
+            <div class="col-lg-7 order-1 order-lg-2">
                 <div class="mb-4">
                     <h4><i class="fa-solid fa-map"></i> Hazard Map</h4>
                     <div id="map">Loading map...</div>
